--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = teensy
 board = teensy41
 framework = arduino
 monitor_speed = 115200
-lib_deps = olikraus/U8g2@^2.35.9
+lib_deps = 
+	olikraus/U8g2@^2.35.9
+    https://github.com/PaulStoffregen/USBHost_t36.git
