--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.35.9
-
+	;CANSART
 	mbed-jackb/EEPROM@0.0.0+sha.b90c5754d8db
+	powerbroker2/SerialTransfer@^3.1.3
